--- a/gra.html
+++ b/gra.html
@@ -39,7 +39,7 @@
           <div class="content">
             <p>1.  高校毕业生去向跟踪系统</p>
             <p>2. app端 前端uniapp 后端springboot</p>
-            <p>3. app下载地址 https://file.runrab.com/directlink/2/gra.app</p>
+            <p>3. app下载地址 https://file.runrab.com/directlink/2/gra.apk</p>
             <br>
             <br>
             <center>
@@ -65,7 +65,7 @@
             <br>
             <br>
             <center>
-              <a href="https://file.runrab.com/directlink/2/gra.app">app下载</a
+              <a href="https://file.runrab.com/directlink/2/gra.apk">app下载</a
               </center>
           </div>
         </div>
